MLFQS data structures, algorithms 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -902,9 +902,43 @@ There are some additional notes to consider:
 
 ### Overview of Current Implementation
 
+We need to newly implement the advanced scheduler, Multilevel Feedback Queue Scheduler(MLFQS). which is not implemented
+yet.
+
 ### Data Structures
 
+To implement MLFQS we need an array of 64 `ready_list`.
+Each entry is for each level of priority.
+
+Also we need to append two new members to the thread structures, `nice` and `recent_cpu`.
+The `nice` is the value that indicates how the thread is "nice" (i.e., tends to yield the cpu).
+The `nice` is an integer value and can have -20 ~ 20. The default `nice` value is zero.
+
+The `recent_cpu` is the value that indicates how much the process had a cpu time "recently".
+The `recent_cpu` is calculated with "Exponentially weighted moving average".
+
+We need a another new variable `load_average` to calculate the `recent_cpu`.
+The `load_average` is the value that indicates the moving average of the size of the ready list.
+
 ### Algorithms
+
+Selecting the next thread to run
+
+- Find from the highest level `ready_list` which is not empty.
+- If there are more threads than one, use Round Robin strategy. (i.e. FIFO with limited time slice)
+
+Calculating the `priority` every 4 ticks
+
+- `priority` = `PRI_MAX` - (`recent_cpu` / 4) - (2 * `nice`)
+- if priority is bigger than `PRI_MAX` or smaller than `PRI_MIN`, needs adjust.
+
+Calculating the `recent_cpu`
+
+- `recent_cpu` = (2 * `load_avg`) / (2 * `load_avg` + 1) * `recent_cpu` + `nice`
+
+Calculating the `load_avg`
+
+- `load_avg` = (59/60) * load_avg + (1/60) * size(`ready_list`)
 
 ### Implementation
 
