Synchronization 문법과 어색한 문장 교정 리뷰 반영

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -313,8 +313,8 @@ The semaphore S is a variable that holds an integer value, and this value can be
 operators, P and V.
 The integer value held by the semaphore is the number of currently available units.
 A thread calls P before accessing the critical section(a shared resource that two or more threads should not access).
-If the semaphore value is over 1, decrement the value and enter the critical section.
-If not, the thread waits until the value is positive, then enters the critical section, decrementing the value.
+If the semaphore value is over 1, it decreases the value and enter the critical section.
+If not, the thread waits until the value is positive, then it enters the critical section, decreasing the value.
 A thread calls V after completing the operation in the critical section.
 V increments the semaphore value.
 
@@ -333,7 +333,7 @@ A `semaphore` is initiated by `sema_init()`. For P and V, `sema_up()` and `sema_
 - `sema_init()`: Set an initial value for the variable `value` and initiate a list, `waiters`.
 - `sema_down()`: P. If the `value` is 0, the caller thread is pushed into the `waiters` by `list_push_back()` and
   blocked
-  by `thread_block()`. When the `value` becomes positive, the caller thread decrements the `value` and returns to access
+  by `thread_block()`. When the `value` becomes positive, the caller thread decreases the `value` and returns to access
   the critical section.
 - `sema_up()`: V. If `waiters` is not empty (i.e., there are threads that want to access the critical section), the
   front thread is popped by `list_pop_front()`. Then, the popped thread takes access to the critical section. Regardless
@@ -417,7 +417,7 @@ back.
 
 If a thread(Thread A) wants to access the shared resource after another thread(Thread B) works on that shared value, it
 uses a condition variable.
-In this case, the "condition" is "Is Thread B finished its work?". Thread A waits for the condition to become true, and
+In this case, the "condition" is "Does Thread B finish its work?". Thread A waits for the condition to become true, and
 Thread B signals to Thread A if the condition is satisfied.
 Here is a brief explanation of how the condition variable works using a lock and a semaphore.
 
