Synchronization 문법과 어색한 문장 교정 리뷰 반영

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -316,7 +316,7 @@ A thread calls P before accessing the critical section(a shared resource that tw
 If the semaphore value is over 1, it decreases the value and enter the critical section.
 If not, the thread waits until the value is positive, then it enters the critical section, decreasing the value.
 A thread calls V after completing the operation in the critical section.
-V increments the semaphore value.
+V increases the semaphore value.
 
 Pintos implemented a semaphore as follows.
 
@@ -337,7 +337,7 @@ A `semaphore` is initiated by `sema_init()`. For P and V, `sema_up()` and `sema_
   the critical section.
 - `sema_up()`: V. If `waiters` is not empty (i.e., there are threads that want to access the critical section), the
   front thread is popped by `list_pop_front()`. Then, the popped thread takes access to the critical section. Regardless
-  of `waiters`, `sema_up()` increments the `value`.
+  of `waiters`, `sema_up()` increases the `value`.
 
 According to the semaphore definition, it seems normal to initialize the semaphore's value to a
 positive number depending on how many resources are available.
