Semaphore 부적절한 표현 리뷰 반영

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -346,9 +346,8 @@ In this case, the caller (i.e., the thread that initialized the semaphore and ca
 into `waiters` and then blocked.
 As the caller whose state was running is blocked, another thread in the ready list is selected and becomes the following
 running thread.
-The selected running thread does its job and then calls `sema_up()` to make the previous running thread become the
-current
-running thread again.
+The selected running thread does its job and then calls `sema_up()` so the previous running thread can be unblocked and
+go to the ready list.
 A typical example is the initializing step of the `idle` thread. The `main` thread initializes the
 semaphore `idle_started` with `value` 0 and calls `sema_down` to pass the control flow to the `idle` thread.
 After the function `idle()` is started, the `idle` thread calls `sema_up()` to give the control flow back to the `main`
