timer_interrupt 호출 순서 변경 리뷰 반영

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -596,8 +596,9 @@ Then the `thread_wakeup()` will be added in `timer_interrupt()`.
 
 ```c++
 static void timer_interrupt(struct intr_frame *args UNUSED) {
-    thread_wakeup(++ticks);
+    ticks++;
     thread_tick();
+    thread_wakeup(ticks);
 }
 ```
 
