Timer awakening algorithm 설명 변경

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -531,7 +531,8 @@ Sleeping algorithms
 
 Awakening algorithms
 
-- Every `thread_tick()` call will check whether there is a `sleep_list_elem` reach the `end_tick`.
+- For every tick, the timer interrupt handler will check whether there is a `sleep_list_elem` who holds the thread that
+  needs to wake up at the current tick.
 - As every `sleep_list_elem` is sorted in ascending order of `end_tick`, we can check the front element.
 - If the `end_tick` of the front element is bigger than the current tick, we end the search.
 - Otherwise,
