MLFQS algorithms 설명 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -933,11 +933,12 @@ Calculating the `priority` every 4 ticks
 - `priority` = `PRI_MAX` - (`recent_cpu` / 4) - (2 * `nice`)
 - if priority is bigger than `PRI_MAX` or smaller than `PRI_MIN`, needs adjust.
 
-Calculating the `recent_cpu`
+Calculating the `recent_cpu` every second
 
 - `recent_cpu` = (2 * `load_avg`) / (2 * `load_avg` + 1) * `recent_cpu` + `nice`
+- `recent_cpu` of the running thread (except the idle thread) is increased by one every tick.
 
-Calculating the `load_avg`
+Calculating the `load_avg` every second
 
 - `load_avg` = (59/60) * load_avg + (1/60) * size(`ready_list`)
 
