--- a/docs/p1.md
+++ b/docs/p1.md
@@ -912,14 +912,26 @@ To implement MLFQS we need an array of 64 `ready_list`.
 Each entry is for each level of priority.
 
 Also we need to append two new members to the thread structures, `nice` and `recent_cpu`.
+
+```c++
+struct thread {
+  ...
+  int nice;
+  int recent_cpu;
+  ...
+};
+```
+
 The `nice` is the value that indicates how the thread is "nice" (i.e., tends to yield the cpu).
 The `nice` is an integer value and can have -20 ~ 20. The default `nice` value is zero.
 
 The `recent_cpu` is the value that indicates how much the process had a cpu time "recently".
-The `recent_cpu` is calculated with "Exponentially weighted moving average".
+The `recent_cpu` is calculated with "Exponentially weighted moving average". The initial value of the `recent_cpu` is
+zero.
 
-We need a another new variable `load_average` to calculate the `recent_cpu`.
+We need a another new global variable `load_average` to calculate the `recent_cpu`.
 The `load_average` is the value that indicates the moving average of the size of the ready list.
+The initial value of the `load_average` is zero.
 
 ### Algorithms
 
