MLFQS data structures fixed point 관련 설명 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -911,13 +911,19 @@ yet.
 To implement MLFQS we need an array of 64 `ready_list`.
 Each entry is for each level of priority.
 
-Also we need to append two new members to the thread structures, `nice` and `recent_cpu`.
+We need to append two new members to the thread structures, `nice` and `recent_cpu` to calculate the priority.
+Also, we need a another new global variable `load_average` to calculate the `recent_cpu`.
+
+We are going to use fixed-point representation for `recent_cpu` and `load_avg` which are real numbers.
+It will be less confusing, if we define a new type.
 
 ```c++
+typedef int fixed_t;
+
 struct thread {
   ...
   int nice;
-  int recent_cpu;
+  fixed_t recent_cpu;
   ...
 };
 ```
@@ -929,7 +935,6 @@ The `recent_cpu` is the value that indicates how much the process had a cpu time
 The `recent_cpu` is calculated with "Exponentially weighted moving average". The initial value of the `recent_cpu` is
 zero.
 
-We need a another new global variable `load_average` to calculate the `recent_cpu`.
 The `load_average` is the value that indicates the moving average of the size of the ready list.
 The initial value of the `load_average` is zero.
 
