MLFQS implementations 설명 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -961,4 +961,150 @@ Calculating the `load_avg` every second
 
 ### Implementation
 
+Disable `thread_get_priority()` and `thread_set_priority()` if the `thread_mlfqs` is set.
+
+```c++
+void thread_set_priority(int new_priority) {
+  if (thread_mlfqs) return;
+  ...
+}
+
+int thread_get_priority() {
+  if (thread_mlfqs) return;
+  ...
+}
+```
+
+Disable priority donation if the `thread_mlfqs` is set.
+
+```c++
+void lock_acquire(struct lock *lock) {
+  if (thread_mlfqs) {
+    /** Default lock_acquire implementation **/
+    return;
+  } 
+  /** New lock_acquire implementation with priority donation **/
+}
+
+void lock_release(struct lock *lock) {
+  if (thread_mlfqs) {
+    /** Default lock_release implementation **/
+    return;
+  } 
+  /** New lock_release implementation with priority donation **/
+}
+```
+
+Fixed point calculations
+
+- As the kernel of the pintos doesn't support the float point calculations, we need fixed point calculations to deal
+  with `recent_cpu` and `load_avg` which are real numbers.
+  For 32-bit representation, we have 1 bit for signs, 17 bits for integer part and 14 bits for decimal part.
+  We need some revise to get a correct calculation using fixed point representation, and each equations are in the
+  appendix of the pintos.
+
+Implementation of calculations
+
+```c++
+void calculate_priority(struct thread* t) {
+  if (t != idle_thread) {
+      int nice = t->nice;
+      fixed_t recent_cpu = t->recent_cpu;
+      t->pritority = fp2int(add_n(div_n(recent_cpu, 4), PRI_MAX - t->nice*2));
+  }
+}
+
+void increase_recent_cpu(struct thread* t) {
+  if (t != idle_thread) {
+    t->recent_cpu = add_n(recent_cpu, 1);
+  }
+}
+
+void calculate_recent_cpu(struct thread* t) {
+  if (t != idle_thread) {
+    fixed_t load_avg_mul_2 = mul_n(load_avg, 2);
+    t->recent_cpu = add_n(mul_x(div_x(load_avg_mul_2, add_n(load_avg_mul_2, 1)), t->recent_cpu), t->nice);
+  }
+}
+
+void calculate_load_avg(void) {
+  int size = list_size(ready_list);;
+  fixed_t c1 = div_n(int2fp(59), 60);
+  fixed_t c2 = div_n(int2fp(1), 60);
+  load_avg = add_x(mul_x(c1, load_avg), mul_n(c2, size));
+}
+```
+
+New implementation of `timer_interrupt()`
+
+```c++
+void timer_interrupt(void) {
+  ticks++;
+  thread_tick();
+  thread_wakeup(ticks);
+  
+  if (thread_mlfqs) {
+    increase_recent_cpu(thread_current());
+    if (ticks % TIMER_FREQ == 0) {
+      calculate_load_avg();
+      thread_foreach(calculate_recent_cpu);
+    }
+    if (ticks % 4 == 0) {
+      thread_foreach(calculate_priority);
+    }
+  }
+}
+```
+
+Getters and Setters for the new variables
+
+```c++
+int thread_get_nice(void) {
+  /** disabling interrupts **/
+  ...
+  int nice = current_thread()->nice;
+  /** re-enabling interrupts **/
+  ...
+  return nice;
+}
+
+void thread_set_nice(int nice) {
+  /** disabling interrupts **/
+  ...
+  struct thread *t = current_thread();
+  t->nice = nice;
+  calculate_priority(t);
+  preemptive_yield();
+  /** re-enabling interrupts **/
+  ...
+}
+
+/** Note 
+ * Returns not exact value of the fixed point `recent_cpu`, 
+ * but `recent_cpu` multiplied with 100 rounded to nearest integer. 
+**/
+int thread_get_recent_cpu(void) {
+  /** disabling interrupts **/
+  ...
+  fixed_t recent_cpu = thread_current()->recent_cpu;
+  int result = fp2int_round(fp_mul_n(recent_cpu, 100));
+  /** re-enabling interrupts **/
+  ...
+  return result;
+}
+
+/** Note: 
+ * Returns not the exact value of the fixed point `load_avg`, 
+ * but `load_avg` multiplied with 100 rounded to nearest integer 
+**/
+int thread_get_load_avg(void) {
+  /** disabling interrupts **/
+  ...
+  int result = fp2int_round(fp_mul_n(load_avg, 100))
+  /** re-enabling interrupts **/
+  ...
+  return result;
+}
+```
+
 ### Rationale
