MLFQS data structure ready_list 설명 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -910,6 +910,11 @@ yet.
 
 To implement MLFQS we need an array of 64 `ready_list`.
 Each entry is for each level of priority.
+If we implement each `ready_list` separately, we need to implement the function that pop every thread from
+every `ready_list` and re-arrange every thread to the `ready_list`s again, then call this function every time the
+priorities calculated.
+However, sorting a single ready_list every time we re-calculate the priorities does the same effect.
+So, we are going to use the same single `ready_list`.
 
 We need to append two new members to the thread structures, `nice` and `recent_cpu` to calculate the priority.
 Also, we need a another new global variable `load_average` to calculate the `recent_cpu`.
