MLFQS rationale 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -1113,3 +1113,15 @@ int thread_get_load_avg(void) {
 ```
 
 ### Rationale
+
+If a priority of a thread is fixed from the begging and never changes, we need to deal with the problems like the
+priority invasions.
+The priority donation can solve this problem, but we need to consider various cases to implement the correct priority
+donation.
+
+As the priority invasion occurs because of the fixed priority, we can also solve it by dynamically calculate the
+priority of the existing threads.
+MLFQS is one of the those methods using the dynamic priority system.
+
+With the `nice` and `recent_cpu` with well-constructed weight, we can make the operating system automatically avoid the
+priority invasions.
