MLFQS Algorithms/Implementaions에 ready_list 관련 내용 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -954,6 +954,7 @@ Calculating the `priority` every 4 ticks
 
 - `priority` = `PRI_MAX` - (`recent_cpu` / 4) - (2 * `nice`)
 - if priority is bigger than `PRI_MAX` or smaller than `PRI_MIN`, needs adjust.
+- Sort ready_list after calculate the priority.
 
 Calculating the `recent_cpu` every second
 
@@ -1040,6 +1041,15 @@ void calculate_load_avg(void) {
 }
 ```
 
+Implementation for sort `ready_list`. We need this function in `thread.h`. Because the `ready_list` isn't reachable in
+the `timer.c`.
+
+```c++
+void sort_ready_list(void) {
+  sort_list(&ready_list, thread_priority_cmp, NULL);
+}
+```
+
 New implementation of `timer_interrupt()`
 
 ```c++
@@ -1056,6 +1066,7 @@ void timer_interrupt(void) {
     }
     if (ticks % 4 == 0) {
       thread_foreach(calculate_priority);
+      sort_ready_list();
     }
   }
 }
