MLFQS Implementations priority 범위를 벗어나는 경우 핸들링 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -1017,6 +1017,8 @@ void calculate_priority(struct thread* t) {
       int nice = t->nice;
       fixed_t recent_cpu = t->recent_cpu;
       t->pritority = fp2int(add_n(div_n(recent_cpu, 4), PRI_MAX - t->nice*2));
+      if (t->priority > PRI_MAX) t->priority = PRI_MAX;
+      else if (t->priority < PRI_MIN) t->priority = PRI_MIN;
   }
 }
 
