MLFQS thread_get_priority() disable 취소
MLFQS를 사용하는 경우에 thread_set_priority()는 비활성화하지만, thread_get_priority()까지 비활성화되면 안될 것 같아 변경하였습니다.

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -967,15 +967,10 @@ Calculating the `load_avg` every second
 
 ### Implementation
 
-Disable `thread_get_priority()` and `thread_set_priority()` if the `thread_mlfqs` is set.
+Disable `thread_set_priority()` if the `thread_mlfqs` is set.
 
 ```c++
 void thread_set_priority(int new_priority) {
-  if (thread_mlfqs) return;
-  ...
-}
-
-int thread_get_priority() {
   if (thread_mlfqs) return;
   ...
 }
