MLFQS recent_cpu/load_avg getter 주석 문장 수정

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -1093,8 +1093,7 @@ void thread_set_nice(int nice) {
 }
 
 /** Note 
- * Returns not exact value of the fixed point `recent_cpu`, 
- * but `recent_cpu` multiplied with 100 rounded to nearest integer. 
+ * Returned value is the rounded value of the recent_cpu multiply by 100 
 **/
 int thread_get_recent_cpu(void) {
   /** disabling interrupts **/
@@ -1107,8 +1106,7 @@ int thread_get_recent_cpu(void) {
 }
 
 /** Note: 
- * Returns not the exact value of the fixed point `load_avg`, 
- * but `load_avg` multiplied with 100 rounded to nearest integer 
+ * Returned value is the rounded value of the load_avg multiply by 100
 **/
 int thread_get_load_avg(void) {
   /** disabling interrupts **/
