MLFQS thread_set_priority() ASSERT로 수정

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -971,7 +971,8 @@ Disable `thread_set_priority()` if the `thread_mlfqs` is set.
 
 ```c++
 void thread_set_priority(int new_priority) {
-  if (thread_mlfqs) return;
+  /* Should not modify the priority with thread_set_priority() if the `thread_mlfqs` is set. */
+  ASSERT(!thread_mlfqs);
   ...
 }
 ```
