restore next stack pointer 내용 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -233,7 +233,8 @@ movl (%eax,%edx,1), %esp
 
 Similarly, `movl SWITCH_NEXT(%esp), %eax` results in a pointer to the next thread's `struct thread`.
 Adding `thread_stack_ofs`, now stored in `%edx`, yields a pointer to the `stack` member of the next thread. The final
-line restores the stack pointer of the next thread.
+line restores the stack pointer of the next thread. From now, esp points to the stack of next page. Instruction from now
+is in context of the next thread, and cur page(context) is freezed.
 
 4. **Restore Registers**
 
@@ -249,6 +250,10 @@ popl %ebx
 ```asm
 ret
 ```
+
+If the thread is the first thread, we will discuss this case in the next section. If not, the `ret` instruction will
+unfreeze the page(context), push the saved register, and finally eip will be restored to right after
+of `switch_threads()` call.
 
 ### Special Case: Starting a Thread for the First Time
 
