fake frame 설명 수정

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -260,7 +260,7 @@ of `switch_threads()` call.
 The initialization of a thread poses a unique challenge. Specifically, the stack pointer for the thread hasn't been set
 yet. As noted, `switch_threads()` requires information about the previous stack to switch to the next thread correctly.
 However, an initial thread lacks this prior stack. Thus, it becomes necessary to initialize certain stack frames for the
-first thread. This initialization is performed in `thread_start()`, found in `src/threads/thread.c`.
+first thread. This initialization is performed in `thread_create()`, found in `src/threads/thread.c`.
 
 ```c
 tid_t
@@ -295,8 +295,8 @@ Lastly, we have `kernel_thread_frame`, which calls `function` with `aux` as its 
 interrupts are enabled, `function` is called with the argument `aux`, and finally, `thread_exit()` is invoked.
 
 In summary, the roles of `kernel_thread_frame`, `switch_entry_frame`, and `switch_threads_frame` are to establish the
-correct execution environment for the first thread. This setup ensures that the initial thread can seamlessly
-invoke `thread_schedule_tail()` and switch to the next thread.
+correct execution environment when creating thread. This setup ensures to initialize thread can seamlessly and
+invoke `thread_schedule_tail()`.
 
 ## Synchronization
 
