--- a/docs/p1.md
+++ b/docs/p1.md
@@ -245,6 +245,7 @@ popl %ebp
 popl %ebx
 ```
 
+In the context of the next thread, restore registers using `pop` instructions.
 5. **Return to Caller**
 
 ```asm
