--- a/docs/p1.md
+++ b/docs/p1.md
@@ -252,9 +252,7 @@ In the context of the next thread, restore registers using `pop` instructions.
 ret
 ```
 
-If the thread is the first thread, we will discuss this case in the next section. If not, the `ret` instruction will
-unfreeze the page(context), push the saved register, and finally eip will be restored to right after
-of `switch_threads()` call.
+If the thread is the first thread, we will discuss this case in the next section. If not, the `ret` instruction will restore `eip` to point right after of the `switch_threads()` call in `schedule()`.
 
 ### Special Case: Starting a Thread for the First Time
 
