--- a/docs/p1.md
+++ b/docs/p1.md
@@ -45,6 +45,7 @@ Team Number: 20
         + [Algorithms](#algorithms-1)
         + [Implementation](#implementation-1)
         + [Rationale](#rationale-1)
+      + [Further Notes](#further-notes)
     * [Advanced Scheduler](#advanced-scheduler)
         + [Overview of Current Implementation](#overview-of-current-implementation-2)
         + [Data Structures](#data-structures-2)
