코드 스타일 통일

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -263,14 +263,13 @@ However, an initial thread lacks this prior stack. Thus, it becomes necessary to
 first thread. This initialization is performed in `thread_create()`, found in `src/threads/thread.c`.
 
 ```c
-tid_t
-thread_create(const char *name, int priority,
-              thread_func *function, void *aux)
-{
+tid_t thread_create(const char *name, int priority, thread_func *function, void *aux) {
   struct thread *t;
   struct kernel_thread_frame *kf;
   struct switch_entry_frame *ef;
   struct switch_threads_frame *sf;
+  ...
+}
 ```
 
 At the top is the `switch_threads_frame`. Its `eip` points to `switch_entry()`, as defined in `switch.S`. This means
@@ -326,11 +325,10 @@ V increases the semaphore value.
 Pintos implemented a semaphore as follows.
 
 ```c
-struct semaphore
-  {
-    unsigned value;         /* Current value. */
-    struct list waiters;    /* List of waiting threads */
-  };
+struct semaphore {
+  unsigned value;         /* Current value. */
+  struct list waiters;    /* List of waiting threads */
+};
 ```
 
 A `semaphore` is initiated by `sema_init()`. For P and V, `sema_up()` and `sema_down()` is implemented.
@@ -388,11 +386,10 @@ There are two main differences between a lock and a semaphore.
 Pintos implemented a lock as follows.
 
 ```c
-struct lock
-  {
-    struct thread *holder;          /* Thread holding lock */
-    struct semaphore semaphore;     /* Binary semaphore controlling access */
-  };
+struct lock {
+  struct thread *holder;          /* Thread holding lock */
+  struct semaphore semaphore;     /* Binary semaphore controlling access */
+};
 ```
 
 As a lock performs like a binary semaphore, it has a `semaphore` as a member variable and a `holder` for the thread
@@ -437,21 +434,19 @@ Here is a brief explanation of how the condition variable works using a lock and
 Pintos implemented a condition as follows.
 
 ```c
-struct condition
-  {
-    struct list waiters;    /* List of waiting threads */
-  };
+struct condition {
+  struct list waiters;    /* List of waiting threads */
+};
 ```
 
 The list `waiters` holds the struct `semaphore_elem` elements.
 `semaphore_elem` is defined like below.
 
 ```c
-struct semaphore_elem
-  {
-    struct list_elem elem;          /* List element */
-    struct semaphore semaphore;     /* This semaphore. */
-  };
+struct semaphore_elem {
+  struct list_elem elem;          /* List element */
+  struct semaphore semaphore;     /* This semaphore. */
+};
 ```
 
 `condition` is initialized by `cond_init()` and performs its functionality with three
@@ -492,9 +487,7 @@ We should reimplement the `timer_sleep()` function defined in `device/timer.c`.
 ```c
 /* Sleeps for approximately TICKS timer ticks. Interrupts must
    be turned on. */
-void
-timer_sleep (int64_t ticks)
-{
+void timer_sleep (int64_t ticks) {
 int64_t start = timer_ticks ();
 
 ASSERT (intr_get_level () == INTR_ON);
@@ -518,9 +511,9 @@ We defined a new list and its element structure to manage the sleeping thread ef
 static struct list sleep_list;
 
 struct sleep_list_elem {
-    struct list_elem elem;          /* List element */
-    int64_t end_tick;               /* Tick to wake up */
-    struct semaphore semaphore;     /* Semaphore to block a sleeping thread */
+  struct list_elem elem;          /* List element */
+  int64_t end_tick;               /* Tick to wake up */
+  struct semaphore semaphore;     /* Semaphore to block a sleeping thread */
 };
 ```
 
@@ -553,15 +546,15 @@ The new function `thread_sleep()` will look like the following code and be calle
 
 ```c
 void thread_sleep(int64_t end_tick) {
-    /* Define `sleep_list_elem` variable and initialize it */
-    ...
-    
-    /* Insert `sleep_list_elem` into the `sleep_list` */
-    /* We need to define `list_less_function`, `less()`, to use the `list_insert_ordered()` */
-    ...
-    
-    /* Semaphore down. (i.e., Start sleeping) */
-    ...
+  /* Define `sleep_list_elem` variable and initialize it */
+  ...
+
+  /* Insert `sleep_list_elem` into the `sleep_list` */
+  /* We need to define `list_less_function`, `less()`, to use the `list_insert_ordered()` */
+  ...
+
+  /* Semaphore down. (i.e., Start sleeping) */
+  ...
 }
 ```
 
@@ -569,10 +562,10 @@ Then the new `timer_sleep()` is defined as below.
 
 ```c
 void timer_sleep(int64_t ticks) {
-    int64_t start = timer_ticks;
+  int64_t start = timer_ticks;
     
-    ASSERT (intr_get_level () == INTR_ON);
-    thread_sleep(start+ticks);
+  ASSERT (intr_get_level () == INTR_ON);
+  thread_sleep(start+ticks);
 }
 ```
 
@@ -583,18 +576,18 @@ named `thread_wakeup()`.
 
 ```c
 void thread_wakeup(int64_t current_tick) {
-    /* Define a placeholder for iterating */
+  /* Define a placeholder for iterating */
+  ...
+  /* While loop until the `sleep_list` empty */
+  while(!list_empty(sleep_list)) {
+    /* Get the front element */
     ...
-    /* While loop until the `sleep_list` empty */
-    while(!list_empty(sleep_list)) {
-        /* Get the front element */
-        ...
-        /* Break the while loop if the element's `end_tick` is greater than `current_tick` */
-        if ( ... )
-            break;
-        /* Else, pop front from the `sleep_list` and call sema_up for its `semaphore` */
-        ...
-    }
+    /* Break the while loop if the element's `end_tick` is greater than `current_tick` */
+    if ( ... )
+      break;
+    /* Else, pop front from the `sleep_list` and call sema_up for its `semaphore` */
+    ...
+  }
 }
 ```
 
@@ -602,9 +595,9 @@ Then the `thread_wakeup()` will be added in `timer_interrupt()`.
 
 ```c
 static void timer_interrupt(struct intr_frame *args UNUSED) {
-    ticks++;
-    thread_tick();
-    thread_wakeup(ticks);
+  ticks++;
+  thread_tick();
+  thread_wakeup(ticks);
 }
 ```
 
@@ -1015,11 +1008,11 @@ Implementation of calculations
 ```c
 void calculate_priority(struct thread* t) {
   if (t != idle_thread) {
-      int nice = t->nice;
-      fixed_t recent_cpu = t->recent_cpu;
-      t->pritority = fp2int(add_n(div_n(recent_cpu, 4), PRI_MAX - t->nice*2));
-      if (t->priority > PRI_MAX) t->priority = PRI_MAX;
-      else if (t->priority < PRI_MIN) t->priority = PRI_MIN;
+    int nice = t->nice;
+    fixed_t recent_cpu = t->recent_cpu;
+    t->pritority = fp2int(add_n(div_n(recent_cpu, 4), PRI_MAX - t->nice*2));
+    if (t->priority > PRI_MAX) t->priority = PRI_MAX;
+    else if (t->priority < PRI_MIN) t->priority = PRI_MIN;
   }
 }
 
