typo 및 문법 오류 수정

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -175,7 +175,7 @@ threads ready to run.
 
 The above diagram shows the process of thread switching. The current thread is in the `THREAD_RUNNING` state. If a
 thread
-has used up its timeslice, `thread_tick()` (called by `timer_interrupt`) will call the
+has used up its time slice, `thread_tick()` (called by `timer_interrupt`) will call the
 function `intr_yield_on_return()`. `intr_yield_on_return()` change `yield_on_return` flag to `true` and let
 `intr_handler` know. Then, `intr_handler` will call `thread_yield()` to switch to the next thread. `thread_yield()` will
 call `schedule()` and `switch_threads()` to switch to the next thread during interrupt.
@@ -401,7 +401,7 @@ A function `lock_init()` initializes a lock. There are four functions to impleme
   with `NULL`.
   As the lock is the binary semaphore, `semaphore` is initialized with the value 1.
 - `lock_acquire()`: Checks whether the `holder` is the caller(it must not), and then invoke `sema_down()`. Then, set
-  the `holder` tothe current thread.
+  the `holder` to the current thread.
 - `lock_release()`: Checks whether the `holder` is the caller(it must be), and then set the `holder` NULL. Then
   invoke `sema_up()`.
 - `lock_try_acquire()`: Lock version of `sema_try_down()`. Acquire the lock only when the `holder` is NULL.
@@ -852,7 +852,7 @@ void refresh_priority(struct thread *t) {
 - **Function for `preemtive_yield()`**:
 
 ```c
-// Add this funcion to where two conditions occurs, change or priority in running thread. new thread added to ready list
+// Add this function to where two conditions occurs, change or priority in running thread. new thread added to ready list
 // such as, thread_create(), thread_set_priority(), sema_up()
 void preemtive_yield() {
 struct thread *current = thread_current();
@@ -915,7 +915,7 @@ However, sorting a single ready_list every time we re-calculate the priorities d
 So, we are going to use the same single `ready_list`.
 
 We need to append two new members to the thread structures, `nice` and `recent_cpu` to calculate the priority.
-Also, we need a another new global variable `load_average` to calculate the `recent_cpu`.
+Also, we need a new global variable `load_average` to calculate the `recent_cpu`.
 
 We are going to use fixed-point representation for `recent_cpu` and `load_avg` which are real numbers.
 It will be less confusing, if we define a new type.
@@ -1000,7 +1000,7 @@ Fixed point calculations
 - As the kernel of the pintos doesn't support the float point calculations, we need fixed point calculations to deal
   with `recent_cpu` and `load_avg` which are real numbers.
   For 32-bit representation, we have 1 bit for signs, 17 bits for integer part and 14 bits for decimal part.
-  We need some revise to get a correct calculation using fixed point representation, and each equations are in the
+  We need some revise to get a correct calculation using fixed point representation, and each equation is in the
   appendix of the pintos.
 
 Implementation of calculations
