파일명 수정한 pdf 생성

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -215,7 +215,8 @@ preserves their values.
 2. **Save Current Stack Pointer**
 
 ```asm
-mov thread_stack_ofs, %edx # uint32_t thread_stack_ofs = offsetof(struct thread, stack); from thread.c
+# uint32_t thread_stack_ofs = offsetof(struct thread, stack); from thread.c
+mov thread_stack_ofs, %edx 
 movl SWITCH_CUR(%esp), %eax
 movl %esp, (%eax,%edx,1)
 ```
@@ -281,7 +282,8 @@ more detailed description follows:
 ```asm
 # Implementation of switch_entry() in `switch.S`
 addl $8, %esp # discard switch_threads() arguments: cur and next
-pushl %eax    # push SWITCH_CUR(%esp) to the stack, which will be the argument for thread_schedule_tail()
+pushl %eax    # push SWITCH_CUR(%esp) to the stack, 
+              # which will be the argument for thread_schedule_tail()
               # SWITCH_CUR(%esp) points to the current thread's struct thread
 call thread_schedule_tail 
 addl $4, %esp # clean up stack
@@ -550,7 +552,8 @@ void thread_sleep(int64_t end_tick) {
   ...
 
   /* Insert `sleep_list_elem` into the `sleep_list` */
-  /* We need to define `list_less_function`, `less()`, to use the `list_insert_ordered()` */
+  /* We need to define `list_less_function`, 
+   * `less()`, to use the `list_insert_ordered()` */
   ...
 
   /* Semaphore down. (i.e., Start sleeping) */
@@ -582,7 +585,8 @@ void thread_wakeup(int64_t current_tick) {
   while(!list_empty(sleep_list)) {
     /* Get the front element */
     ...
-    /* Break the while loop if the element's `end_tick` is greater than `current_tick` */
+    /* Break the while loop if the element's `end_tick` 
+     * is greater than `current_tick` */
     if ( ... )
       break;
     /* Else, pop front from the `sleep_list` and call sema_up for its `semaphore` */
@@ -761,10 +765,14 @@ The following are the key functions for our implementation:
 - **Managing the `ready_list`**:
 
 ```c
-list_insert_ordered(&ready_list, &current_thread->elem, thread_priority_cmp, NULL);
+list_insert_ordered(&ready_list, &current_thread->elem, cmp_thread_priority, NULL);
 
-static bool thread_priority_cmp(const struct list_elem *a, const struct list_elem *b, void *aux) {
-  return list_entry(a, struct thread, elem)->priority > list_entry(b, struct thread, elem)->priority;
+static bool 
+cmp_thread_priority(const struct list_elem *a, const struct list_elem *b, void *aux) {
+  return (
+      list_entry(a, struct thread, elem)->priority 
+          > list_entry(b, struct thread, elem)->priority;
+      )
 }
 ```
 
@@ -777,7 +785,10 @@ void lock_acquire(struct lock *lock) {
 
   if (holder != NULL) {
     cur->waiting_lock = lock;
-    list_insert_ordered(&holder->donations, &cur->donation_elem, thread_priority_cmp, NULL);
+    list_insert_ordered(&holder->donations, 
+                        &cur->donation_elem, 
+                        thread_priority_cmp, 
+                        NULL);
     donate_priority(cur, holder);
   }
 
@@ -791,7 +802,8 @@ void lock_acquire(struct lock *lock) {
 
 ```c
 void donate_priority() {
-  bool is_in_ready_list = false; // if the donee is in the ready list, sort ready_list
+  // if the donee is in the ready list, sort ready_list
+  bool is_in_ready_list = false; 
   struct thread *priority_doner = thread_current();
   struct thread *lock_holder = doner->waiting_lock->holder;
   // Init variables
@@ -819,7 +831,11 @@ void lock_release(struct lock *lock) {
   struct thread *cur = thread_current();
   struct thread *holder = lock->holder;
 
-  for (struct list_elem *e = list_begin(&holder->donations); e != list_end(&holder->donations); e = list_next(e)) {
+  for (
+      struct list_elem *e = list_begin(&holder->donations); 
+      e != list_end(&holder->donations); 
+      e = list_next(e)
+        ) {
     struct thread *t = list_entry(e, struct thread, donation_elem);
     if (t->waiting_lock == lock) {
       list_remove(e);
@@ -842,7 +858,11 @@ void refresh_priority(struct thread *t) {
     return;
   } 
   
-  struct thread *max = list_entry(list_max(&t->donations, thread_priority_cmp, NULL), struct thread, donation_elem);
+  struct thread *max = list_entry(
+      list_max(&t->donations, thread_priority_cmp, NULL), 
+      struct thread, 
+      donation_elem
+  );
   if (max->priority > t->original_priority) {
     t->priority = max->priority;
   }
@@ -851,13 +871,19 @@ void refresh_priority(struct thread *t) {
 
 - **Function for `preemtive_yield()`**:
 
-```c
-// Add this function to where two conditions occurs, change or priority in running thread. new thread added to ready list
+```c++
+// Add this function to where two conditions occurs, 
+// change or priority in running thread. new thread added to ready list
 // such as, thread_create(), thread_set_priority(), sema_up()
 void preemtive_yield() {
 struct thread *current = thread_current();
-struct thread *next = list_entry(list_front(&ready_list), struct thread, elem);
-if (!intr_context() && !list_empty(&ready_list) && current->priority < next->priority) {
+struct thread *next = list_entry(
+list_front(&ready_list), struct thread, elem
+);
+if (
+!intr_context() &&
+!list_empty(&ready_list) &&
+(current->priority < next->priority)) {
 thread_yield();
 }
 }
@@ -969,7 +995,8 @@ Disable `thread_set_priority()` if the `thread_mlfqs` is set.
 
 ```c
 void thread_set_priority(int new_priority) {
-  /* Should not modify the priority with thread_set_priority() if the `thread_mlfqs` is set. */
+  /* Should not modify the priority with thread_set_priority() 
+   * if the `thread_mlfqs` is set. */
   ASSERT(!thread_mlfqs);
   ...
 }
@@ -1025,7 +1052,11 @@ void increase_recent_cpu(struct thread* t) {
 void calculate_recent_cpu(struct thread* t) {
   if (t != idle_thread) {
     fixed_t load_avg_mul_2 = mul_n(load_avg, 2);
-    t->recent_cpu = add_n(mul_x(div_x(load_avg_mul_2, add_n(load_avg_mul_2, 1)), t->recent_cpu), t->nice);
+    t->recent_cpu = add_n(
+        mul_x(
+            div_x(load_avg_mul_2, add_n(load_avg_mul_2, 1)), t->recent_cpu), 
+            t->nice
+        );
   }
 }
 
