아웃라인 추가

--- a/docs/p2/p2.md
+++ b/docs/p2/p2.md
@@ -4,18 +4,33 @@
 
 Team Number: 20
 
-À±º´ÁØ(20190766)
+ìœ¤ë³‘ì¤€(20190766)
 
-±èÄ¡Çå(20190806)
+ê¹€ì¹˜í—Œ(20190806)
 
 ## Table of Contents
 
 # Analysis of current implementation
 
+## Process execution procedure
+
+## System call procedure
+
+## File system
+
+
 # Requirements
 
-## User Process
+## 1. User Process
 
-## System Calls
+### A. Argument Passing
 
-## Denying Writes to Executables
+### B. Process Termination Messages
+
+## 2. System Calls
+
+### A. User Process Manipulation
+
+### B. File Manipulation
+
+## 3. Denying Writes to Executables
