interrupt 후 복귀 내용 추가

--- a/docs/p2/p2.md
+++ b/docs/p2/p2.md
@@ -162,6 +162,33 @@ bool load(const char *file_name, void (**eip)(void), void **esp) {
 }
 ```
 
+인터럽트에서 복귀하는 것 처럼 프로그램을 실행한다는 의미는 OS 가 `start_process`를 인터럽트 프레임을 
+초기화 했고, 실행파일을 로드를 완료한 상태에서, `esp`, `eip` 가 적절하게 설정되었다면, 아래의 
+`intr_exit`을 통해 로드한 해당 프로그램으로 진입할 수 있다는 의미다. 
+
+```asm
+.globl intr_exit
+.func intr_exit
+intr_exit:
+        /* Restore caller's registers. */
+	popal
+	popl %gs
+	popl %fs
+	popl %es
+	popl %ds
+
+        /* Discard `struct intr_frame' vec_no, error_code,
+           frame_pointer members.
+            
+            esp is set by setup_stack  (*esp = PHYS_BASE;)
+        */
+           
+	addl $12, %esp
+
+        /* Return to caller. (eip set to (void (*)(void)) ehdr.e_entry;) */
+	iret
+.endfunc
+```
 
 
 ## System call procedure
