바이너리에 대한 쓰기 금지 데이터 구조 추가

--- a/docs/p2/p2.md
+++ b/docs/p2/p2.md
@@ -216,3 +216,33 @@ TODO:
 ### B. File Manipulation
 
 ## 3. Denying Writes to Executables
+
+프로그램이 실행중일 때 바이너리 (executable) 이 수정된다면, 프로그램이 예상치 못한 동작을 할 수 있다. 따라서, 현재 실행중인
+프로그램의 파일을 수정하지 못하게 protection 기능을 구현해야한다. 프로세스가 로드하기 위해 바이너리를 오픈 한 후에, 
+파일에 대한 쓰기를 거부하도록 하고, 프로세스가 종료할 때, 다시 쓰기를 허용해주는 방식으로 하면, 실행중의 바이너리에 대한 쓰기를
+막을 수 있다. 
+
+### Data Structure
+
+```diff
+---
+Index: src/threads/thread.h
+===================================================================
+diff --git a/src/threads/thread.h b/src/threads/thread.h
+--- a/src/threads/thread.h	(revision 1361a982be7e58b65f837b05037cbff0c68526c2)
++++ b/src/threads/thread.h	(date 1697187720836)
+@@ -108,6 +108,7 @@
+ #ifdef USERPROG
+   /* Owned by userprog/process.c. */
+   uint32_t *pagedir; /* Page directory. */
++  struct file *file;
+ #endif
+ 
+   int original_priority;          /* Original priority of the thread */
+
+```
+
+이런식으로 `struct thread` 에 `file` 을 추가해 현재 실행중인 스레드가 어떤 파일에서 읽혔는지
+load 시에 저장하고, exit 시에 레퍼런스 해서 allow 할 수 있도록 해준다. 
+
+
